--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,9 +4,9 @@
     </div>
     <nav>
         <a [routerLink]="''">Sobre</a>
-        <a [routerLink]="'experience'">Experiências</a>
-        <a [routerLink]="'projects'">Projetos</a>
-        <a [routerLink]="'skills'">Habilidades</a>
-        <a [routerLink]="'contact'">Contato</a>
+        <a [routerLink]="'/experience'">Experiências</a>
+        <a [routerLink]="'/projects'">Projetos</a>
+        <a [routerLink]="'/skills'">Habilidades</a>
+        <a [routerLink]="'/contact'">Contato</a>
     </nav>
 </header>
