--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,13 @@
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; line-height: 1;}
+body { 
+	margin: 0; 
+	padding: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif; 
+	line-height: 1;
+	
+}
 
 ol, ul {
 	list-style: none;
