--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -1,1 +1,21 @@
 <app-header></app-header>
+<main>
+    <div class="container">
+        <h2 style="color: #FFF;">Experiência:</h2>
+        <mat-accordion>
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="panel"
+                *ngFor="let item of lista">
+                <mat-expansion-panel-header class="panel_header">
+                    <mat-panel-title class="panel_title">
+                        {{item.titulo}}
+                    </mat-panel-title>
+                    <mat-panel-description class="panel_description">
+                        {{item.ano}}
+                    </mat-panel-description>
+                </mat-expansion-panel-header>
+                <h2>{{item.empresa}}</h2>
+                <p>{{item.descricao}}</p>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
+</main>
