Criação da pageProjects

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,10 @@
 <app-header></app-header>
+<main>
+    <div class="container">
+        <div *ngFor="let item of list" [ngStyle]="{'border-color': item.color}">
+            <h3>{{item.titulo}}</h3>
+            <p>{{item.descricao}}</p>
+            <a [ngStyle]="{'color': item.color}">Vizualizar projeto</a>
+        </div>
+    </div>
+</main>
