--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,7 +1,163 @@
 @import '../style_scss/main.scss';
-
-button{
-    width: 80px;
-    height: 40px;
-    background-color: #FFF;
+@import '../../../config_scss/rem-calc.scss';
+main{
+    justify-content: space-around;
+    
+    h1, h2, h3, h4, p{
+        word-break: break-all;
+    }
+    .contactInfo {
+        width: 40%;
+        background-color: #f9f9f9;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+      
+      h2 {
+        font-size: 24px;
+        margin-bottom: 20px;
+        
+      }
+      
+      .container_info {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: column;
+      
+       div {
+        width: 100%;
+        margin-bottom: rem-calc(20);
+        padding: rem-calc(10);
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      }
+      
+      h3 {
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin-bottom: rem-calc(10);
+        font-style: italic;
+    }
+      
+      p {
+        font-size: 1rem;
+        margin-bottom: 5px;
+        font-style: italic;
+      }
+    }
 }
+
+    .contactForm {
+        background-color: #f9f9f9;
+        border-radius: rem-calc(5);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        padding: rem-calc(20);
+        margin: rem-calc(20);
+        width: 30%;
+      h2 {
+        font-size: 1.5rem;
+        margin-bottom: rem-calc(20);
+      }
+      
+      form label {
+        display: block;
+        font-size: rem-calc(16);
+        margin-bottom: rem-calc(5);
+      }
+      
+      .error{
+        font-size: 0.8rem;
+        color: red;
+      }
+
+      form input,
+      form textarea {
+        display: block;
+        width: 100%;
+        padding: rem-calc(10);
+        border-radius: rem-calc(5);
+        border: none;
+        margin-bottom: rem-calc(20);
+        font-size: rem-calc(16);
+      }
+      
+      form textarea {
+        height: rem-calc(150);
+      }
+      
+      form button {
+        background-color: #0077b6;
+        color: #fff;
+        border: none;
+        border-radius: rem-calc(5);
+        padding: rem-calc(10) rem-calc(20);
+        font-size: rem-calc(16);
+        cursor: pointer;
+      }
+      
+      form button:hover {
+        background-color: #023e8a;
+      }
+    }
+    
+    @media (max-width: 580px){
+        
+        .contactInfo {
+            width: 60%;
+            margin: rem-calc(20) auto;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            flex-wrap: wrap;
+          
+          h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+          }
+          
+          .container_info {
+            width: 90%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            flex-direction: column;
+            
+           div {
+            width: 100%;
+            margin-bottom: rem-calc(20);
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+          }
+          
+          h3 {
+            font-size: 1.5rem;
+            font-weight: 500;
+            margin-bottom: rem-calc(10);
+            font-style: italic;
+        }
+          
+          p {
+            word-break: break-all;
+          }
+        }
+    }
+        .contactForm {
+            width: 80%;
+            margin: rem-calc(20) auto;
+        }
+    }
+
+}
+
+
+
+
