--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,4 +1,8 @@
 <form>
-    <input type="text" #input (keyup)="search(input.value)" placeholder="Buscar Tecnologia...">
-    <img src="../../../assets/icons/search/search.svg" alt="Buscar Pokemon">
+  <mat-select style="color: #FFF;" [(value)]="selectedValue" (selectionChange)="select()"  >
+    <mat-option [value]="'none'">none</mat-option>
+    <mat-option  *ngFor="let skill of skills" [value]="skill.nome">
+      <p>{{skill.nome}}</p>
+    </mat-option>
+  </mat-select>
 </form>
